Add missing register response type.
